# graphiti-assistant

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  api_usage_guide.md  cypher_cheatsheet.md  docker-compose.yml  implementation_plan.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
app/: api.py  api_client.py  assistant.py  db.py  formatting.py  llm.py  logger.py  memory.py  ontology.py  providers.py  seed_demo.py  seed_hospital.py  tools.py
app/static/: ws_test.html
data/: appointment_booking.csv  doctor_directory.csv  doctor_slot_availability.csv  symptom_speciality_map.csv
hospital_api/: Dockerfile  db.py  main.py  requirements.txt  seed.py
notebooks/: test_api_conversation.ipynb
scripts/: add_evening_slots.py  generate_hospital_data.py  slot_modifier.py  smoke_test.py  verify_db.py
tests/: conftest.py  test_api.py
