[project]
name = "graphiti-personal-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphiti-core>=0.3.0",
    "neo4j>=5.0.0",
    "openai>=1.40.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "httpx2>=2.4.0",
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
# Add project root to sys.path so `import app` works from the tests/ directory
pythonpath = ["."]
testpaths = ["tests"]
